# GenAI-discovery

./: .gitattributes  README.md  requirements.txt
app/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app/backend/: Dockerfile  entrypoint.sh  main.py
app/backend/db/: random.txt
app/backend/src/: file_handler.py  main.py  rag_logic.py  requirements.txt
app/backend/srcs/: audio_manager.py  file_handler.py  main.py  prompt_templates.py  rag_logic.py  requirements.txt
app/backend/vosk-model-small-fr-0.22/: README
app/backend/vosk-model-small-fr-0.22/conf/: model.conf
app/backend/vosk-model-small-fr-0.22/graph/: disambig_tid.int
app/backend/vosk-model-small-fr-0.22/graph/phones/: word_boundary.int
app/backend/vosk-model-small-fr-0.22/ivector/: global_cmvn.stats
app/db/: random.txt
app/frontend/: Dockerfile  app.conf  app.js  index.html  style.css
app/ollama/: Dockerfile
benchamrk/: README.md  model_benhmark.py  pyproject.toml
python/: mdoel_benhmark.py
rag/: .gitignore  README.md  prompt.py  pyproject.toml  rag_local.py  requirements.txt
rag/db/: ia_and_ecology.docx
