[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "docx2txt>=0.9",
    "langchain-chroma==1.1.0",
    "langchain-classic==1.0.8",
    "langchain-community==0.4.2",
    "langchain-ollama==1.1.0",
    "langchain-text-splitters==1.1.2",
    "nltk>=3.9.4",
    "pyaudio==0.2.14",
    "pypdf>=6.14.2",
    "spacy>=3.8.14",
    "speechrecognition>=3.17.0",
    "vosk==0.3.45",
]
